--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,17 +32,20 @@
 <div class="row justify-content-center py-2 px-2">
   <div class="col-4 ">
     <div class="card">
-      <div class="card-header">
-        hello
+      <div class="card-header d-flex justify-content-between">
+        <div>
+          <p>hello</p>
+        </div>
+        <div>
+          <button class="btn btn-primary mx-1" (click)="showSuccess()">تایید</button>
+          <button mat-raised-button color="primary">انصراف</button>
+        </div>
       </div>
 
       <app-admin-grid [datagrid]="this.rowData" [columnsgrid]="columnDefs">
       </app-admin-grid>
 
-      <div class="d-flex flex-row justify-content-end py-2 px-2">
-        <button class="btn btn-primary mx-1" (click)="showSuccess()">تایید</button>
-        <button mat-raised-button color="primary">انصراف</button>
-      </div>
+
     </div>
 
   </div>
