fix hieght grid

--- a/src/app/commonComponent/admin-grid/admin-grid.component.html
+++ b/src/app/commonComponent/admin-grid/admin-grid.component.html
@@ -2,7 +2,9 @@
 			    style="margin: 2px ; height: 350px;"
 			    class="ag-theme-alpine"
 			    [rowData]="datagrid"
-          [enableRtl]="true"
-          (gridReady)="onGridReady($event)"
+          		[enableRtl]="true"
+				[rowHeight]="30"
+				[headerHeight]="30"
+          		(gridReady)="onGridReady($event)"
 			    [columnDefs]="columnsgrid">
 			</ag-grid-angular>
