--- a/src/app/commonComponent/admin-grid/admin-grid.component.html
+++ b/src/app/commonComponent/admin-grid/admin-grid.component.html
@@ -1,10 +1,11 @@
-      <ag-grid-angular
-			    style="margin: 2px ; height: 350px;"
-			    class="ag-theme-alpine"
-			    [rowData]="datagrid"
-          		[enableRtl]="true"
-				[rowHeight]="30"
-				[headerHeight]="30"
-          		(gridReady)="onGridReady($event)"
-			    [columnDefs]="columnsgrid">
-			</ag-grid-angular>
+<ag-grid-angular
+  style="margin: 2px; height: 350px"
+  class="ag-theme-alpine"
+  [rowData]="datagrid"
+  [enableRtl]="true"
+  [rowHeight]="30"
+  [headerHeight]="30"
+  (gridReady)="onGridReady($event)"
+  [columnDefs]="columnsgrid"
+>
+</ag-grid-angular>
