--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,50 +1,3 @@
-<mat-toolbar color="primary" class="toolbar d-flex justify-content-between">
+<app-menu></app-menu>
 
-  <div>
-    <button mat-button [matMenuTriggerFor]="aboveMenu">Above</button>
-    <mat-menu #aboveMenu="matMenu" yPosition="above">
-      <button mat-menu-item>Item 1</button>
-      <button mat-menu-item>Item 2</button>
-    </mat-menu>
-
-    <button mat-button [matMenuTriggerFor]="belowMenu">Below</button>
-    <mat-menu #belowMenu="matMenu" yPosition="below">
-      <button mat-menu-item>Item 1</button>
-      <button mat-menu-item>Item 2</button>
-    </mat-menu>
-
-    <button mat-button [matMenuTriggerFor]="beforeMenu">Before</button>
-    <mat-menu #beforeMenu="matMenu" xPosition="before">
-      <button mat-menu-item>Item 1</button>
-      <button mat-menu-item>Item 2</button>
-    </mat-menu>
-  </div>
-
-  <div>
-    <button mat-button [matMenuTriggerFor]="afterMenu">After</button>
-    <mat-menu #afterMenu="matMenu" xPosition="after">
-      <button mat-menu-item>Item 1</button>
-      <button mat-menu-item>Item 2</button>
-    </mat-menu>
-  </div>
-</mat-toolbar>
-
-<div class="col-4 mx-auto py-1 px-1">
-  <div class="card">
-    <div class="card-header p-1 d-flex align-items-baseline justify-content-between ">
-      <div class="px-2" style="font-weight:bold;">
-        <p>لیست </p>
-      </div>
-      <div>
-        <button class="btn btn-primary btn-sm mx-1" (click)="showSuccess()">تایید</button>
-        <button mat-raised-button m color="primary">انصراف</button>
-      </div>
-    </div>
-
-    <app-admin-grid [datagrid]="this.rowData" [columnsgrid]="columnDefs">
-    </app-admin-grid>
-
-
-  </div>
-
-</div>
+<app-fish></app-fish>
