--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,8 @@
 @import 'ag-grid-community/dist/styles/ag-grid.css';
 @import 'ag-grid-community/dist/styles/ag-theme-alpine.css';
 
-.body,
-.html{
+body,
+html{
   direction: rtl !important;
 }
 
@@ -95,10 +95,16 @@
     font-family: var(--main-fa-font) !important;
 }
 
+.ag-theme-alpine {
+  --ag-font-family: var(--main-fa-font) !important;
+  font-family: var(--main-fa-font) !important;
+}
 
 body {
   font-family: var(--main-fa-font) !important;
 }
+
+
 
 
 /* based on angular-toastr css https://github.com/Foxandxss/angular-toastr/blob/cb508fe6801d6b288d3afc525bb40fee1b101650/dist/angular-toastr.css */
@@ -293,3 +299,5 @@ button.toast-close-button {
     width: 25em;
   }
 }
+
+
