--- a/src/app/commonComponent/menu/menu.component.html
+++ b/src/app/commonComponent/menu/menu.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar color="primary" class="toolbar d-flex justify-content-between">
 
     <div>
-      <button mat-button [matMenuTriggerFor]="aboveMenu">Above</button>
+      <button mat-button [matMenuTriggerFor]="aboveMenu">فرمها</button>
       <mat-menu #aboveMenu="matMenu" yPosition="above">
-        <button mat-menu-item>Item 1</button>
-        <button mat-menu-item>Item 2</button>
+        <button mat-menu-item [routerLink]="['/sample1']">مثال اصلی</button>
+        <button mat-menu-item [routerLink]="['/fish']">فیش حقوقی</button>
       </mat-menu>
   
       <button mat-button [matMenuTriggerFor]="belowMenu">Below</button>
