--- a/src/app/commonComponent/sample1/sample1.component.html
+++ b/src/app/commonComponent/sample1/sample1.component.html
@@ -1,19 +1,21 @@
 <div class="col-4 mx-auto p-1">
-    <div class="card">
-      <div class="card-header p-1 d-flex align-items-baseline justify-content-between ">
-        <div class="px-2" style="font-weight:bold;">
-          <p>لیست </p>
-        </div>
-        <div>
-          <button class="btn btn-primary btn-sm mx-1" (click)="showSuccess()">تایید</button>
-          <button mat-raised-button m color="primary">انصراف</button>
-        </div>
+  <div class="card">
+
+    <div class="card-header p-1 d-flex align-items-baseline justify-content-between ">
+      <div class="px-2" style="font-weight:bold;">
+        <p>لیست </p>
       </div>
-  
-      <app-admin-grid [datagrid]="this.rowData" [columnsgrid]="columnDefs">
-      </app-admin-grid>
-  
-  
+      <div>
+        <button class="btn btn-primary btn-sm mx-1" (click)="showSuccess()">تایید</button>
+        <button mat-raised-button m color="primary">انصراف</button>
+      </div>
     </div>
-  
+    <div style="height: 80vh;">
+      <app-admin-grid heightGrid="100%" [datagrid]="this.rowData" [columnsgrid]="columnDefs">
+      </app-admin-grid>
+    </div>
+
+
   </div>
+
+</div>
