--- a/src/app/commonComponent/sample1/sample1.component.html
+++ b/src/app/commonComponent/sample1/sample1.component.html
@@ -1,21 +1,42 @@
-<div class="col-4 mx-auto p-1">
-  <div class="card">
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+<div class="d-flex mx-auto flex-row justify-content-start">
 
-    <div class="card-header p-1 d-flex align-items-baseline justify-content-between ">
-      <div class="px-2" style="font-weight:bold;">
-        <p>لیست </p>
+  <div class="col-4 p-1">
+    <div class="card">
+
+      <div class="card-header p-1 d-flex">
+        <div class="px-2" style="font-weight:bold;">
+          <p>لیست </p>
+        </div>
       </div>
-      <div>
-        <button class="btn btn-primary btn-sm mx-1" (click)="showSuccess()">تایید</button>
-        <button mat-raised-button m color="primary">انصراف</button>
+      <div style="height: 80vh;">
+        <app-admin-grid heightGrid="100%" [datagrid]="this.rowData" [columnsgrid]="columnDefs">
+        </app-admin-grid>
       </div>
     </div>
-    <div style="height: 80vh;">
-      <app-admin-grid heightGrid="100%" [datagrid]="this.rowData" [columnsgrid]="columnDefs">
-      </app-admin-grid>
-    </div>
-
-
   </div>
-
+  
+    <div class="col-2 p-1">
+      <div class="card">
+        <div class="card-header p-1 d-flex align-items-baseline justify-content-between ">
+          <div class="px-2" style="font-weight:bold;">
+            <p>جزییات </p>
+          </div>
+          <div>
+            <button class="btn btn-primary btn-sm mx-1" (click)="showSuccess()">تایید</button>
+            <button mat-raised-button m color="primary">انصراف</button>
+          </div>
+        </div>
+        <mat-form-field appearance="outline" class="example-form-field p-1">
+          <mat-label>کد </mat-label>
+          <input matInput type="text" formControlName="IndustryId">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="example-form-field p-1">
+          <mat-label>نام </mat-label>
+          <input matInput type="text" formControlName="IndustryName">
+        </mat-form-field>
+      </div>
+    </div>
+  
 </div>
+</form>
