--- a/src/app/commonComponent/menu/menu.component.html
+++ b/src/app/commonComponent/menu/menu.component.html
@@ -5,6 +5,7 @@
       <mat-menu #aboveMenu="matMenu" yPosition="above">
         <button mat-menu-item [routerLink]="['/sample1']">مثال اصلی</button>
         <button mat-menu-item [routerLink]="['/fish']">فیش حقوقی</button>
+        <button mat-menu-item [routerLink]="['/acc']">سند حسابداری </button>
       </mat-menu>
   
       <button mat-button [matMenuTriggerFor]="belowMenu">Below</button>
