correct form insert

--- a/src/app/commonComponent/admin-grid/admin-grid.component.html
+++ b/src/app/commonComponent/admin-grid/admin-grid.component.html
@@ -8,5 +8,6 @@
   [headerHeight]="30"
   (gridReady)="onGridReady($event)"
   [columnDefs]="columnsgrid"
+  (rowClicked)='onRowClicked($event)'
 >
 </ag-grid-angular>
