--- a/src/app/commonComponent/sample1/sample1.component.html
+++ b/src/app/commonComponent/sample1/sample1.component.html
@@ -10,7 +10,7 @@
           </div>
         </div>
         <div style="height: 80vh;">
-          <app-admin-grid (refreshdata)="refresh($event)" heightGrid="100%" [datagrid]="rowData"
+          <app-admin-grid (selectedRow)="selectedRow($event)" (refreshdata)="refresh($event)" heightGrid="100%" [datagrid]="rowData"
             [columnsgrid]="columnDefs">
           </app-admin-grid>
         </div>
@@ -38,8 +38,8 @@
         </mat-form-field>
         <mat-form-field appearance="outline" class="p-1">
           <mat-label>ماه</mat-label>
-          <mat-select formControlName="Month">
-            <mat-option *ngFor="let data of matselectdata" value="{{data.id}}">{{data.name}}</mat-option>
+          <mat-select [(value)]="defaultSelect">
+            <mat-option *ngFor="let data of matselectdata" [value]="data.id">{{data.name}}</mat-option>
           </mat-select>
         </mat-form-field>
 
@@ -54,7 +54,7 @@
           </mat-autocomplete>
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="p-1">
+        <!-- <mat-form-field appearance="outline" class="p-1">
           <mat-label>گروه</mat-label>
 
           <mat-select formControlName="Group" multiple>
@@ -74,14 +74,28 @@
             </mat-option>
 
           </mat-select>
+        </mat-form-field> -->
+
+        <mat-form-field appearance="outline" class="p-1">
+          <mat-label>گروه</mat-label>
+          <mat-chip-list #chipList multiple="true">
+            <mat-chip *ngFor="let fruit of fruits" [value]="fruit.name" [selected]="fruit.selected"
+              (click)="onSelectFruit(fruit)">
+              {{fruit.name}}
+            </mat-chip>
+          </mat-chip-list>
         </mat-form-field>
 
-        <mat-form-field  appearance="outline" class="p-1">
+        <mat-form-field appearance="outline" class="p-1">
           <mat-label>تاریخ شروع</mat-label>
-          <input matInput  [min]="MinDate" [matDatepicker]="picker6" [value]="aDate" placeholder="تاریخ شروع"  (dateInput)="onInput($event)" (dateChange)="onChange($event)">
-          <mat-datepicker-toggle matSuffix [for]="picker6"></mat-datepicker-toggle>
-          <mat-datepicker #picker6></mat-datepicker>
+          <input matInput [min]="MinDate" [matDatepicker]="picker6" [value]="aDate" placeholder="تاریخ شروع"
+            (dateInput)="onInput($event)" (dateChange)="onChange($event)">
+          <mat-datepicker-toggle matSuffix [for]="picker6" style="transform: translate(0px, 6px) !important;"></mat-datepicker-toggle>
+          <mat-datepicker #picker6 ></mat-datepicker>
         </mat-form-field>
+
+
+
 
       </div>
     </div>
