--- a/src/app/commonComponent/sample1/sample1.component.html
+++ b/src/app/commonComponent/sample1/sample1.component.html
@@ -24,7 +24,7 @@
             <p>جزییات </p>
           </div>
           <div>
-            <button class="btn btn-primary btn-sm mx-1"  [disabled]="!form.valid" type="submit" (click)="onSubmit()">تایید</button>
+            <button class="btn btn-primary btn-sm mx-1"   type="submit" (click)="onSubmit()">تایید</button>
             <button mat-raised-button m color="primary" class="m-1">انصراف</button>
           </div>
         </div>
@@ -43,17 +43,8 @@
           </mat-select>
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="p-1">
-          <mat-label>سال</mat-label>
-          <input type="text" placeholder="سال انتخابی" aria-label="Number" matInput formControlName="Year"
-            [matAutocomplete]="auto">
-          <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-              {{option}}
-            </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
 
+    <app-autocomplete (data)="getdatacompelete($event)" [value]="autocompelete"></app-autocomplete>
         <!-- <mat-form-field appearance="outline" class="p-1">
           <mat-label>گروه</mat-label>
 
