--- a/src/app/commonComponent/autocomplete/autocomplete.component.html
+++ b/src/app/commonComponent/autocomplete/autocomplete.component.html
@@ -1,11 +1,14 @@
-<form id="{{id}}">
+<form >
 <mat-form-field appearance="outline" class="p-1">
     <mat-label>سال</mat-label>
-    <input type="text" placeholder="سال انتخابی" aria-label="Number" (input)="chnagevalue(id)" [(ngModel)]="value"
-     matInput  [formControl]="myControl"
-      [matAutocomplete]="auto">
-    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option" (onSelectionChange)="chnagevalue1(option,id)">
+    <input type="text" placeholder="سال انتخابی" aria-label="Number" 
+     matInput  [formControl]="inputControl"
+      [matAutocomplete]="auto"
+      (focus)="onFocus()"
+      (input)="chnagevalue($event)" 
+      >
+    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete"  (closed)="onTouch()" (optionSelected)="onChange($event)">
+      <mat-option *ngFor="let option of filteredOptions | async" [value]="option" >
         {{option}}
       </mat-option>
     </mat-autocomplete>
