--- a/src/app/commonComponent/menu/menu.component.html
+++ b/src/app/commonComponent/menu/menu.component.html
@@ -4,6 +4,7 @@
       <button mat-button [matMenuTriggerFor]="aboveMenu">فرمها</button>
       <mat-menu #aboveMenu="matMenu" yPosition="above">
         <button mat-menu-item [routerLink]="['/sample1']">مثال اصلی</button>
+        <button mat-menu-item [routerLink]="['/sample2']">مثال 2</button>
         <button mat-menu-item [routerLink]="['/fish']">فیش حقوقی</button>
         <button mat-menu-item [routerLink]="['/acc']">سند حسابداری </button>
       </mat-menu>
